.gitignore by Uday Reddy <udayreddy@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,80 @@
+# Ignore objects and archives.
+*.[oa]
+# library description files
+*.lo
+*.la
+
+.deps/
+.libs/
+Makefile
 Makefile.in
+Test/Makefile
+Test/Makefile.in
+Test/Zpolytest/Makefile
+Test/Zpolytest/Makefile.in
+Test/ehrhart/Makefile
+Test/ehrhart/Makefile.in
+Test/ehrhart_union/Makefile
+Test/ehrhart_union/Makefile.in
+Test/general/Makefile
+Test/general/Makefile.in
+Test/pp/Makefile
+Test/pp/Makefile.in
+Test/ranking/Makefile
+Test/ranking/Makefile.in
+Zpolytest64
 aclocal.m4
-autom4te.cache
-configure
+autom4te.cache/
+c2p
+cln/Makefile.in
+cln/aclocal.m4
+cln/autom4te.cache/
+cln/config.h.in
+cln/configure
+cln/m4/libtool.m4
+cln/m4/ltoptions.m4
+cln/m4/ltsugar.m4
+cln/m4/ltversion.m4
+cln/m4/lt~obsolete.m4
+cln/polylib/Makefile.in
+config.h
 config.h.in
+config.log
+config.status
+configure
+count
+disjoint_union_adj
+disjoint_union_sep
+ehrhart_lower_bound
+ehrhart_quick_apx
+ehrhart_ranking64
+ehrhart_union64
+ehrhart_upper_bound
+example
+findv
+include/Makefile
+include/Makefile.in
+include/polylib/Makefile
+include/polylib/Makefile.in
+include/polylib/arithmetic_errors.h
+include/polylib/arithmetique.h
+include/polylib/polylib.h
+libtool
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+polylib.doxygen
+polylib64-uninstalled.pc
+polylib64-uninstalled.sh
+polylib64.pc
+polylib64.pc.in
+polytest64
+pp64
+r2p
+stamp-h1
+testCompressParms64
+testehrhart64
+testlib
+verif_ehrhart64
