--- a/configure.in
+++ b/configure.in
@@ -135,21 +135,27 @@ AC_ARG_ENABLE(int-lib,
         [lib_type=int
 	 bits=`expr $ac_cv_sizeof_int \* 8`
 	 polylibs="libpolylib$bits.la $polylibs"
-	 ALL_BITS="$bits $ALL_BITS"
+	 ALL_BITS=" $bits $ALL_BITS"
 	])
 AC_ARG_ENABLE(longint-lib,
 	[  --enable-longint-lib    Build a long int library], 
         [lib_type=longint
 	 bits=`expr $ac_cv_sizeof_long_int \* 8`
-	 polylibs="libpolylib$bits.la $polylibs"
-	 ALL_BITS="$bits $ALL_BITS"
+	 case "$ALL_BITS" in
+	   *' '$bits' '*) ;;
+	   *) polylibs="libpolylib$bits.la $polylibs"
+	      ALL_BITS=" $bits $ALL_BITS" ;;
+	 esac
 	])
 AC_ARG_ENABLE(longlongint-lib,
 	[  --enable-longlongint-lib Build a long long int library], 
         [lib_type=longlongint
 	 bits=`expr $ac_cv_sizeof_long_long_int \* 8`
-	 polylibs="libpolylib$bits.la $polylibs"
-	 ALL_BITS="$bits $ALL_BITS"
+	 case "$ALL_BITS" in
+	   *' '$bits' '*) ;;
+	   *) polylibs="libpolylib$bits.la $polylibs"
+	      ALL_BITS=" $bits $ALL_BITS" ;;
+	 esac
 	])
 
 dnl Check for GMP library
