--- a/configure.in
+++ b/configure.in
@@ -45,7 +45,7 @@ dnl	Makefile in this directory.
 
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(polylib, 5.22.5)
+AC_INIT(polylib, 5.22.5b)
 AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([gnu])
 AC_CONFIG_SRCDIR(include/polylib/polylib.h.in)
@@ -69,6 +69,7 @@ if test "x$prefix" != "xNONE"; then
 fi
 
 dnl Checks for programs.
+AC_LANG(C)
 AC_PROG_CC
 AC_PROG_LN_S
 AC_PROG_INSTALL
@@ -258,7 +259,28 @@ AC_CHECK_PROG(DOXYGEN,doxygen,doxygen,test,[$PATH:$doxygen_package/bin:/usr/loca
 dnl AC_MSG_RESULT($DOXYGEN)
 
 
+dnl AC_CHECK_LIB(pthread, pthread_create)
+ACX_PTHREAD()
+AC_ARG_ENABLE(threadsafe,
+	[  --enable-threadsafe     threadsafe polylib (enabled by default if a threading library is found))],
+	[
+		if test "$enable_threadsafe" = "yes" -a "X$PTHREAD_CC" = "X"; then
+			AC_MSG_ERROR([pthread library not found])
+		fi
+	] )
+
+if test "X$PTHREAD_CC" = "X" ; then
+	AC_MSG_WARN([No pthread library found, PolyLib will not be threadsafe])
+elif test "X$PTHREAD_CC" != "X" ; then
+	LIBS="$LIBS $PTHREAD_LIBS"
+	CFLAGS="$CFLAGS $PTHREAD_CFLAGS -DTHREAD_SAFE_POLYLIB"
+	CC="$PTHREAD_CC"
+	AC_MSG_NOTICE([Will build a threadsafe library])
+fi
+
 AC_SUBST(LIBS)
+AC_SUBST(CFLAGS)
+AC_SUBST(CC)
 
 dnl long/int bits and compilation flags
 AC_SUBST(BITS)
@@ -287,8 +309,8 @@ AC_OUTPUT(Makefile
 	)
 
 
-echo "Polylib will be built with " $ALL_BITS "integer size(s)"
 echo "---------------------------------------------------"
+echo "Polylib will be built with " $ALL_BITS "integer size(s)"
 echo "You can proceed with:"
 echo "make               :to build the libs and the executables"
 echo "make tests         :to test the library"
